add init ordermentumService, add error handling
